force-app/main/default/objects/CampaignMember/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <formula>HYPERLINK( &quot;https://infinitaslearning.lightning.force.com/lightning/r/Account/&quot;&amp; Contact.Account.Id &amp;&quot;/view&quot; , Contact.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account name</label>
    <type>Text</type>
</CustomField>