force-app/main/default/objects/CampaignMember/fields/CompetingProducts__c.field-meta.xml
<CustomField>
    <fullName>CompetingProducts__c</fullName>
    <label>Competing Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>