force-app/main/default/objects/CampaignMember/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <formula>LastName &amp; &quot;, &quot; &amp; FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullname</label>
    <type>Text</type>
</CustomField>