force-app/main/default/objects/CampaignMember/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>Contact.IsInactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>