force-app/main/default/objects/CampaignMember/fields/LastCallAttempt__c.field-meta.xml
<CustomField>
    <fullName>LastCallAttempt__c</fullName>
    <inlineHelpText>Stores new date/time whenever the &apos;Call Attempt&apos; is changed.</inlineHelpText>
    <label>Last Call Attempt</label>
    <type>DateTime</type>
</CustomField>