force-app/main/default/objects/CampaignMember/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>LIber requested field (#INC-27990): this way the KAM doesn’t need to enter a lead that is discarded</description>
    <formula>TEXT( Lead.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>