force-app/main/default/objects/CampaignMember/fields/LeadCompany__c.field-meta.xml
<CustomField>
    <fullName>LeadCompany__c</fullName>
    <formula>Lead.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Company</label>
    <type>Text</type>
</CustomField>