force-app/main/default/objects/CampaignMember/fields/Marketeer__c.field-meta.xml
<CustomField>
    <fullName>Marketeer__c</fullName>
    <label>Marketeer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>