force-app/main/default/objects/CampaignMember/fields/MemberLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>MemberLastUpdate__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Last update</label>
    <type>DateTime</type>
</CustomField>