force-app/main/default/objects/CampaignMember/fields/ProductInformation__c.field-meta.xml
<CustomField>
    <fullName>ProductInformation__c</fullName>
    <label>Product Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>