force-app/main/default/objects/CampaignMember/fields/Schoolnumber__c.field-meta.xml
<CustomField>
    <fullName>Schoolnumber__c</fullName>
    <label>Schoolnumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>