force-app/main/default/objects/CampaignMember/fields/TeacherNumber__c.field-meta.xml
<CustomField>
    <fullName>TeacherNumber__c</fullName>
    <label>Teacher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>